--- a/assest/css/style.css
+++ b/assest/css/style.css
@@ -256,7 +256,7 @@ header{
 .about{
     width: 100%;
     min-height: 100vh;
-    display: none;
+    display: flex;
     justify-content: center;
     align-items: center;
 }
